--- a/alu.html
+++ b/alu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Day 2</title>
+    <title>GitHub Day 2 from web</title>
 </head>
 <body>
     <p>Something to Nothing</p>
